--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/local-notifications": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/vibration": "^4.2.1",
         "@ionic/storage": "^2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "^1.0.5",
@@ -31,6 +32,7 @@
         "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-vibration": "^2.1.5",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.0.4",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
@@ -57,7 +59,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "de.appplant.cordova.plugin.local-notification": {}
+            "de.appplant.cordova.plugin.local-notification": {},
+            "cordova-plugin-vibration": {}
         },
         "platforms": [
             "android"
